# rosetta_bridge

./: .gitignore  ITERATIVE_LOOP.md  README.md  plan.md  pyproject.toml  spec.md
src/rosetta_bridge/: main.py
src/rosetta_bridge/analyzer/: enums.py  sampler.py
src/rosetta_bridge/codegen/: audit.py  functions.py  renderer.py  repos.py  writer.py
src/rosetta_bridge/core/: config.py
src/rosetta_bridge/inference/: client.py  prompts.py
src/rosetta_bridge/inspector/: db.py
src/rosetta_bridge/web/: app.py
src/rosetta_bridge/web/static/: index.html
templates/: models.py.j2  repos.py.j2
tests/: debug_db.py  debug_gemini.py
tests/unit/: test_audit.py  test_config.py  test_db_inspector.py  test_enums.py  test_function_schemas.py  test_gemini_client.py  test_generate_command.py  test_inspect_command.py  test_prompts.py  test_renderer.py  test_repo_integration.py  test_repos_template.py  test_sampler.py  test_writer.py
