[project]
name = "rosetta-bridge"
version = "0.1.0"
description = "Legacy-to-Agent Semantic Mapper: Transform cryptic database schemas into AI-ready code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.45",
    "typer>=0.21.1",
    "uvicorn>=0.32.0",
]

[project.scripts]
rosetta-bridge = "rosetta_bridge.main:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
